# neodb

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  FEDERATION.md  README.md  codecov.yml  compose.yml  mkdocs.yml  neodb.env.example  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
boofilsic/: asgi.py  context_processors.py  settings.py  urls.py
catalog/: apis.py  apps.py  forms.py  index.py  models.py  recommendation.py  urls.py  views.py  views_debug.py  views_edit.py
common/: api.py  mcp.py  middleware.py  sentry.py  setup.py  tests.py  urls.py  utils.py  validators.py  views.py  views_manage.py
docs/: accounts.md  api.md  apps.md  configuration.md  development.md  features.md  index.md  install.md  origin.md  servers.json  servers.md  sites.md  troubleshooting.md
journal/: forms.py  urls.py
locale/: django.pot
mastodon/: jobs.py  urls.py
misc/: mcp.env
neodb/: pytest.ini
neodb-takahe/: .dockerignore  .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml  pytest.ini
neodb-takahe/activities/: admin.py
neodb-takahe/activities/management/commands/: fetch_preview_cards.py
neodb-takahe/activities/migrations/: 0017_post_language.py  0022_fanout_subject_hashtag_alter_fanout_type.py  0024_post_application.py  0026_alter_timelineevent_type.py  0027_conversation_post_conversation_and_more.py  0029_post_url_db_index.py  0030_timelineevent_undismissed_idx.py
neodb-takahe/activities/models/: __init__.py  conversation.py  emoji.py  fan_out.py  hashtag.py  post.py  post_interaction.py  preview_card.py
neodb-takahe/activities/services/: post.py  timeline.py
neodb-takahe/activities/views/: debug.py  posts.py  timelines.py
neodb-takahe/api/: decorators.py  middleware.py  schemas.py
neodb-takahe/api/migrations/: 0006_pushnotification_icon.py
neodb-takahe/api/models/: push.py  token.py
neodb-takahe/api/views/: __init__.py  accounts.py  announcements.py  media.py  mutes.py  oauth.py  polls.py  report.py  search.py  statuses.py  tags.py  timelines.py  trends.py
neodb-takahe/core/: context.py  files.py  json.py  ld.py  middleware.py  sentry.py  signatures.py  uris.py
neodb-takahe/core/models/: __init__.py  config.py
neodb-takahe/docs/: contributing.rst
neodb-takahe/docs/_templates/sidebar/: brand.html
neodb-takahe/hatchway/: view.py
neodb-takahe/mediaproxy/: views.py
neodb-takahe/static/css/: style.css
neodb-takahe/stator/: graph.py
neodb-takahe/stator/management/commands/: runstator.py
neodb-takahe/takahe/: settings.py
neodb-takahe/templates/: 500.html  _footer.html  about.html  base.html
neodb-takahe/templates/activities/: post.html  tag.html
neodb-takahe/templates/admin/: domain_create.html  domain_edit.html  identities.html
neodb-takahe/templates/identity/: view.html
neodb-takahe/templates/settings/: _menu.html  migrate_in.html  migrate_out.html  tokens.html
neodb-takahe/tests/: conftest.py
neodb-takahe/tests/activities/models/: test_group_actor.py  test_neodb_ap_object.py  test_post_interaction.py  test_post_quote.py  test_post_replies.py  test_post_types.py  test_quote_authorization.py  test_timeline_event.py
neodb-takahe/tests/activities/views/: test_post_replies_view.py
neodb-takahe/tests/api/: test_markers.py  test_new_endpoints.py  test_statuses.py
neodb-takahe/tests/core/: test_html.py  test_json.py  test_ld.py  test_signatures.py
neodb-takahe/tests/hatchway/: test_view.py
neodb-takahe/tests/users/views/: test_auth.py  test_identity_feed.py
neodb-takahe/users/management/commands/: pruneidentities.py
neodb-takahe/users/migrations/: 0028_follow_notify.py  0030_alter_identity_icon_uri_alter_identity_image_uri.py  0031_inboxmessage_metadata.py  0032_add_account_note.py
neodb-takahe/users/models/: __init__.py  account_note.py  block.py  follow.py  hashtags.py  identity.py  password_reset.py  relay.py  report.py
neodb-takahe/users/services/: user.py
neodb-takahe/users/views/: base.py
neodb-takahe/users/views/admin/: announcements.py  identities.py  relays.py
neodb-takahe/users/views/settings/: __init__.py  migration.py
social/: feed_grouping.py  models.py  urls.py  views.py
takahe/: .coveragerc  ap_handlers.py  html.py  jobs.py  models.py  pytest.ini  search.py  utils.py  views.py
test_data/: goodreads_library_export.csv  https___api_itch_io_games_3268593  https___api_themoviedb_org_3_movie_282758_api_key_8964_language_en_append_to_response_external_ids_credits  https___api_themoviedb_org_3_person_17419_api_key_8964_language_zh_CN_append_to_response_external_ids  https___api_themoviedb_org_3_person_17419_api_key_8964_language_zh_HK_append_to_response_external_ids  https___api_themoviedb_org_3_person_17419_api_key_8964_language_zh_TW_append_to_response_external_ids  https___api_themoviedb_org_3_tv_57243_api_key_8964_language_en_append_to_response_external_ids_credits  https___api_themoviedb_org_3_tv_57243_season_0_episode_1_api_key_8964_language_en_US_append_to_response_external_ids_credits  https___book_douban_com_subject_36255848_  https___book_qidian_com_info_1035420986_  https___boxd_it_7lcA  https___boxd_it_aEh4eZ  https___eggplant_place_movie_6AUSh8LPNYZZBTZcsDtxo4  https___image_tmdb_org_t_p_original__6yfXtkVPWxeU3OonoKDem4Hrdbb_jpg  https___itch_io_embed_3268593  https___music_apple_com_cn_album_1284391545  https___music_apple_com_fr_album_1284391545  https___music_douban_com_subject_1401362_  https___music_youtube_com_playlist_list_OLAK5uy_mYp2X6OH03hsFOLZHrnMk7griAOuA9kuA  https___musicbrainz_org_ws_2_artist_a74b1b7f_71a5_4011_9441_d0b5e4122711_fmt_json_inc_aliases_url_rels_genres_tags  https___musicbrainz_org_ws_2_release_1834eae1_741b_3c03_9ca5_0df3decb43ea_fmt_json_inc_artists_recordings_labels_media_release_groups_tags_genres  https___musicbrainz_org_ws_2_release_1834eae1_741b_3c03_9ca5_0df3decb43ea_fmt_json_inc_recordings_labels_media  https___musicbrainz_org_ws_2_release_1834eae1_741b_3c03_9ca5_0df3decb43ea_fmt_json_inc_recordings_labels_media_isrcs  https___open_spotify_com_album_65KwtzkJXw7oT819NFWmEP  (+20 more)
tests/: __init__.py  (+21 more)
(+1092 files in other folders)
