[project]
name = "neodb"
version = "0.11"
description = "🧩 self-hosted server tracking what you read/watch/listen/play, powering a global distributed community federating via ActivityPub."
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "blurhash-python>=1.2.2",
    "cachetools>=5.5.0",
    "dateparser>=1.2.0",
    "django<5.0",
    "django-anymail[mailgun,amazon-ses,sendgrid,mailjet,postal,mandrill,mailersend,brevo]>=13.0",
    "django-auditlog>=3.0.0",
    "django-bleach>=3.1.0",
    "django-compressor",
    "django-cors-headers",
    "django-environ>=0.11.2",
    "django-hijack>=3.7.0",
    "django-jsonform @ git+https://github.com/alphatownsman/django-jsonform",
    "django-maintenance-mode",
    "django-markdownx>=4.0.7",
    "django-ninja>=1.3.0",
    "django-polymorphic==4.0.0",
    "django-redis<6.0.0",
    "django-rq>=3.1",
    "django-sass-processor>=1.4.1",
    "django-storages[boto3]>=1.14.2",
    "django-tz-detect>=0.5.0",
    "django-user-messages>=1.1.0",
    "dnspython>=2.7.0",
    "easy-thumbnails>=2.10",
    "filetype>=1.2.0",
    "gunicorn>=23.0.0",
    "httpx>=0.27.2",
    "igdb-api-v4>=0.3.3",
    "langdetect>=1.0.9",
    "listparser>=0.20",
    "loguru>=0.7.2",
    "lxml>=5.3.0",
    "markdownify>=0.13.1",
    "mistune>=3.0.2",
    "openpyxl>=3.1.5",
    "podcastparser>=0.6.10",
    "psycopg2-binary",
    "requests>=2.32.3",
    "sentry-sdk>=2.17.0",
    "setproctitle>=1.3.3",
    "tqdm>=4.66.6",
    "typesense>=0.21.0",
    "urlman>=2.0.2",
    "validators>=0.34.0",
    "deepmerge>=1.1.1",
    "django-typed-models @ git+https://github.com/alphatownsman/django-typed-models.git",
    "atproto>=0.0.55",
    "discord-py>=2.4.0",
    "libsass>=0.23.0",
    "django-storages>=1.14.5",
    "certifi==2025.1.31",
    "deepl>=1.22.0",
    "nh3>=0.2.21",
    "django-mcp>=0.1.0",
]

[tool.rye]
managed = true
virtual = true
lock-with-sources = false
dev-dependencies = [
    "pre-commit>=4.0.1",
    "django-stubs>=5.1.2",
    "djlint>=1.36.4",
    "lxml-stubs>=0.5.1",
    "pyright>=1.1.400",
    "ruff>=0.9.1",
    "pytest-django>=4.11.1",
    # "mkdocs-material>=9.5.42",
]

[tool.pyright]
exclude = [
    "media",
    ".venv",
    ".git",
    "playground",
    "tests",
    "neodb-takahe",
]
reportIncompatibleVariableOverride = false
reportUnnecessaryTypeIgnoreComment = true

[tool.djlint]
ignore = "T002,T003,H005,H006,H019,H020,H021,H023,H030,H031,D018"
indent = 2

[tool.isort]
profile = "black"

[tool.mypy]
exclude = [
    '^neodb-takahe/',
    '^legacy/',
    '^media/',
    '^playground/',
    '^catalog/*/tests.py',
    '.*migrations.*',
]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "boofilsic.settings"

[tool.ruff]
exclude = [
    "neodb-takahe/*",
    "media",
    ".venv",
    ".git",
    "playground",
]
lint.ignore = ["F403", "F405"]
lint.extend-select = ["I"]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "boofilsic.settings"
python_files = ["tests/*.py"]
testpaths = ["tests" ]
