[project]
name = "neodb"
version = "0.15"
description = "🧩 self-hosted server tracking what you read/watch/listen/play, powering a global distributed community federating via ActivityPub."
readme = "README.md"
requires-python = ">=3.14, <3.15"
dependencies = [
    "blurhash-rs>=1.1.0",
    "cachetools>=5.5.0",
    "dateparser>=1.2.0",
    "django>=5.2,<5.3",
    "django-anymail[mailgun,amazon-ses,sendgrid,mailjet,postal,mandrill,mailersend,brevo]>=13.0",
    "django-auditlog>=3.0.0",
    "django-bleach>=3.1.0",
    "django-compressor",
    "django-cors-headers",
    "django-environ>=0.11.2",
    "django-hijack>=3.7.0",
    "django-jsonform @ git+https://github.com/alphatownsman/django-jsonform",
    "django-maintenance-mode",
    "django-ninja>=1.3.0",
    "django-polymorphic>=4.11.2",
    "django-redis",
    "django-rq>=3.1",
    "django-sass-processor>=1.4.1",
    "django-storages[boto3,google]>=1.14.5",
    "django-tz-detect>=0.5.0",
    "django-user-messages>=1.1.0",
    "dnspython>=2.7.0",
    "easy-thumbnails>=2.10",
    "filetype>=1.2.0",
    "gunicorn>=23.0.0",
    "httpx>=0.27.2",
    "igdb-api-v4>=0.3.3",
    "langdetect>=1.0.9",
    "listparser>=0.20",
    "loguru>=0.7.2",
    "lxml>=6.1.1",
    "markdownify>=0.13.1",
    "mistune>=3.0.2",
    "openpyxl>=3.1.5",
    "podcastparser>=0.6.10",
    "psycopg[binary]>=3.3.4",
    "requests>=2.32.3",
    "sentry-sdk>=2.44.0",
    "setproctitle>=1.3.7",
    "tqdm>=4.66.6",
    "typesense>=0.21.0",
    "urlman>=2.0.2",
    "validators>=0.34.0",
    "deepmerge>=2.0",
    "django-typed-models @ git+https://github.com/alphatownsman/django-typed-models.git",
    "atproto>=0.0.55",
    "discord-py>=2.4.0",
    "libsass>=0.23.0",
    "certifi==2026.2.25",
    "deepl>=1.22.0",
    "nh3>=0.3.5",
    "altcha>=2.0.2,<3",
    "webauthn>=2.0.0,<3",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    # takahe (Fediverse / Mastodon API) dependencies, sharing this venv
    # cryptography upper bound is dictated by atproto (currently <47); takahe only
    # uses long-stable hazmat APIs, so the atproto-compatible range is fine.
    "cryptography>=46",
    "dj-database-url>=2.1.0",
    "django-cache-url>=3.4.5",
    "django-debug-toolbar>=4.3.0",
    "django-htmx>=1.17.3",
    "markdown-it-py>=3.0.0",
    "pillow>=12.2.0",
    "pycountry>=23.12.11",
    "pydantic-settings>=2.2.1",
    "pydantic[email]>=2.7.1",
    "pyld>=3.0.0",
    "pymemcache>=4.0.0",
    "python-dateutil>=2.9.0.post0",
    "pywebpush>=2.0.0",
    "redis>=7.4,<8",
    "rq>=2.1.0",
    "uvicorn>=0.29.0",
    "whitenoise>=6.6.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "django-stubs>=5.1.2",
    "djlint>=1.36.4",
    "lxml-stubs>=0.5.1",
    "ty>=0.0.1a1",
    "ruff>=0.9.1",
    "pytest-django>=4.11.1",
    "coverage>=7.13.5",
    "pytest-cov>=6.0.0",
    "mkdocs-material>=9.5.42,<10",
    "pytest-xdist>=3.8.0",
    # takahe test deps
    "mock>=5.1.0",
    "pytest-asyncio>=0.23.6",
    "pytest-dotenv>=0.5.2",
    "pytest-httpx>=0.30.0",
]

[tool.uv.sources]
# Forked to make pyld's cachetools LRU caches thread-safe: the module-level
# inverse/resolved-context caches (NEODB-SOCIAL-4P0, EGGPLANT-7K) and the
# per-ResolvedContext processed cache (EGGPLANT-153). Tracks upstream master
# @ 1a8a169b (3.2.0-dev) + neodb-social/pyld@neodb-on-master-1a8a169.
pyld = { git = "https://github.com/neodb-social/pyld.git", rev = "52d0fe09559f58aed306579d4769873ba527cc0f" }

[tool.ty.environment]
root = ["./neodb"]

[tool.ty.src]
exclude = ["takahe", "data-svc"]

[tool.ty.rules]
unused-ignore-comment = "ignore"

[tool.djlint]
ignore = "T002,T003,H005,H006,H019,H020,H021,H023,H030,H031,D018"
indent = 2

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "neodb"
exclude = [
    '^takahe/',
    '^data-svc/',
    '^neodb/legacy/',
    '^media/',
    '^playground/',
    '.*migrations.*',
]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "boofilsic.settings"

[tool.ruff]
src = ["neodb", "takahe"]
exclude = [
    # "takahe/*",
    "data-svc/*",
    "media",
    ".venv",
    ".git",
    "playground",
]
lint.ignore = ["F403", "F405"]
# lint.extend-select = ["I"]

[tool.setuptools]
py-modules = []
