[project]
name = "incarnator"
version = "0.12.0"
description = "An ActivityPub/Fediverse server."
authors = [
    { name = "Dan Watson", email = "dcwatson@gmail.com" }
]
dependencies = [
    "blurhash-rs>=1.1.0",
    "cachetools>=5.5.0",
    "cryptography>=48.0.0",
    "dj-database-url>=2.1.0",
    "django>=5.2,<5.3",
    "django-cache-url>=3.4.5",
    "django-cors-headers>=4.3.1",
    "django-debug-toolbar>=4.3.0",
    "django-htmx>=1.17.3",
    "django-storages[google,boto3]>=1.14.5",
    "gunicorn>=23.0.0",
    "httpx>=0.27.2",
    "markdown-it-py>=3.0.0",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pycountry>=23.12.11",
    "pydantic-settings>=2.2.1",
    "pydantic[email]>=2.7.1",
    "pyld>=3.0.0",
    "pymemcache>=4.0.0",
    "python-dateutil>=2.9.0.post0",
    "redis>=5.0.4",
    "sentry-sdk>=2.44.0",
    "urlman>=2.0.2",
    "uvicorn>=0.29.0",
    "whitenoise>=6.6.0",
    "pywebpush>=2.0.0",
    "deepmerge>=2.0.0",
    "rq>=2.1.0",
]
readme = "README.md"
requires-python = ">=3.14, <3.15"

[dependency-groups]
dev = [
    "mock>=5.1.0",
    "pre-commit>=3.7.0",
    "pytest-asyncio>=0.23.6",
    "pytest-django>=4.8.0",
    "pytest-dotenv>=0.5.2",
    "pytest-httpx>=0.30.0",
]

[tool.uv.sources]
# Forked to add thread-safety to module-level LRUCache (NEODB-SOCIAL-4P0,
# EGGPLANT-7K). Tracks upstream master @ 1889cab + neodb-social/pyld@neodb-on-master-1889cab.
pyld = { git = "https://github.com/neodb-social/pyld.git", rev = "a4834df24c8163b15cee3a27a55a2af5d3fbbd75" }

[tool.pytest.ini_options]
addopts = "--tb=short --ds=takahe.settings --import-mode=importlib"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:There is no current event loop",
    "ignore:No directory at",
    "ignore:DateTimeField Post.created",
    "ignore:'index_together' is deprecated",
    "ignore:Deprecated call to",
    "ignore:pkg_resources is deprecated as an API",
    "ignore:Type google._upb",
    "ignore:Marks applied to fixtures",
]
